[project]
name = "the-skillbrary"
version = "1.0.0"
description = "Skillbrary: Low-Latency Registry and MCP Server for Multi-Agent Swarms"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Personal Use License" }
authors = [
    { name = "Axton Carroll" }
]
keywords = [
    "mcp",
    "mcp-server",
    "swarm-intelligence",
    "registry",
    "agent-skills",
    "fastapi",
    "ast-parsing"
]
dependencies = [
    "mcp",
    "requests",
    "fastapi",
    "uvicorn",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
    "mypy>=1.15.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
